[api-auth]: stricter rest api, CreateSession, some fixes
